tests/reflection_typeof_bad_arity.stderr
tests/reflection_typeof_bad_arity.sl:3:2: error: SL2005: call arity mismatch
