tests/reflection_typeof_bad_arity.sl
// Verifies reflection typeof bad arity.
fn main() {
	typeof()
}
